# yt-chat

./: .gitignore  README.md  package.json
client/: .cta.json  .env.example  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
client/public/: manifest.json
client/src/: App.tsx  env.ts  main.tsx  styles.css
client/src/components/: ChatInterface.tsx  ChatManager.tsx  ErrorDisplay.tsx  Header.tsx  LoadingSpinner.tsx  MainLayout.tsx  ServerStatus.tsx  StartOverButton.tsx  TranscriptViewer.tsx  VideoManager.tsx  YouTubeInput.tsx
client/src/hooks/: useChat.ts  useVideoTranscript.ts
client/src/lib/: api.ts
server/: .env.example  README.md  main.py  pyproject.toml
